# RemoteObservatory

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  core.py  main.py  pytest.ini  requirements.txt  setup.py  version.py
3DScope/: EqMount.py  Render.py  SimulatorGui.py  Telescope.py  display.py  render.py
Arduino/: 99-observatory.rules  CMakeLists.txt  arduino_crosscompile.cmake  configure_tty.sh  upload.sh
Arduino/Arduinocore/: CMakeLists.txt  DHT.h  cxa_pure_virtual.h  dht_handler.cpp  dht_handler.h  led_handler.cpp  led_handler.h  relay_handler.cpp  relay_handler.h  servo_handler.cpp  servo_handler.h
Arduino/Controller/: Controller.cc  Controller.ino  DHT.h  led_handler.cpp  led_handler.h  relay_handler.cpp  relay_handler.h
Arduino/Firmata/: Firmata.cpp
Arduino/Focuser/: Focuser.cc
Arduino/INDIDUINOStepper/: CMakeLists.txt  INDIDUINOStepper.cc
Arduino/blinkLED/: blinkLED.cc
Base/: Base.py
Camera/: AbstractCamera.py  IndiASI120MCCamera.py  IndiASICamera.py  IndiASICamera290MMMini.py  IndiASICameraNonCool.py  IndiAbstractCamera.py  IndiAbstractCameraSimulator.py  IndiAbstractCameraSimulatorNonCoolNonOffset.py  IndiAltairCamera.py  IndiAltairCameraNonCool.py  IndiCamera.py  IndiEos350DCamera.py  IndiEos6DCamera.py  IndiPlayerOneCamera.py  IndiVirtualCamera.py
Dashboard/: CameraWidget.py  DashboardWidget.py  browser.py  browser.ui
FilterWheel/: IndiFilterWheel.py  IndiVirtualFilterWheel.py
Focuser/: IndiFocuser.py
Guider/: GuiderPHD2.py  GuiderPHD2bak.py
Imaging/: AsyncWriter.py  AutoFocuser.py  FitsWriter.py  Image.py  ImageQuality.py  IndiAutoFocuser.py  SolvedImageAnalysis.py  fits.py
Manager/: Manager.py
Mount/: AbstractMount.py  Indi10Micron.py  IndiAbstractMount.py  IndiAbstractMountNoPierSide.py  IndiAbstractMountSimulator.py  IndiG11.py  IndiMount.py  IndiVirtualMount.py
ObservationPlanner/: Calibration.py  Constraint.py  DefaultScheduler.py  Dispatch.py  Field.py  Horizon.py  LocalHorizonConstraint.py  Observation.py  ObservationPlanner.py  PlannerWidget.py  Scheduler.py  SpectralObservation.py  SpectroScheduler.py
Observatory/: AggregatedCustomScopeController.py  ArduiRorController.py  ArduiScopeController.py  ArduinoIO.py  DummyScopeController.py  DummycopeController.py  IndiArduiScopeController.py  IndiDomeController.py  IndiRorController.py  IndiScopeController.py  Observatory.py  RorDome.py  ShedObservatory.py  VirtualObservatory.py
Pointer/: DifferentialPointer.py  InvisibleObjectOffsetPointer.py  IterativeSync.py  NoOffsetPointer.py  OffsetPointer.py  StarOffsetPointer.py
ReportEditor/: 220225_Medium_PDF.ipynb
ScopeSimulator/: Catalogs.py  (+11 more)
(+414 files in other folders)
